2005-01-26  Atsushi Enomoto  <atsushi@ximian.com>

	* Tokenizer.cs : just throw SyntaxErrorException instead of Exception.

2005-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* Expression.cs, ColumnReference.cs, BooleanExpression.cs,
	  Aggregation.cs, Literal.cs : added EvalBoolean() to avoid extraneous
	  boxing in RowFilter.

2005-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* Numeric.cs : Fixed ToSameType(). It should let conversion result to
	  reference values.

2005-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* Parser.jay : let's use debug flag when MONO_DEBUG_SQLEXPRESSIONS
	  environment variable is set.
	  Fixed substring() function. C# cast does not allow implicit
	  conversion from object.

2004-07-12 Umadevi S   <sumadevi@novell.com>
        * Tokenizer.cs - read an Int64 from the text instead of Int32. Resolves
bug 61203

                                                                                
2004-06-17  Boris Kirzner <borisk@mainsoft.com>
        *  Comparison.cs - use 'as' to avoid NullReferenceExeption in casting.

2004-05-13  Umadevi S <sumadevi@novell.com>
        *  Literal.cs - made class internal

2004-05-12  Umadevi S <sumadevi@novell.com>
        * Expression.cs, Functions.cs, In.cs, Like.cs, Parser.jay, StringFunctions.cs - made class/enum/interfaces internal

2004-05-12  Umadevi S <sumadevi@novell.com>
        * BooleanExpression.cs,ColumnReference.cs, Comparision.cs - made class/enum internal

2004-05-12  Umadevi S <sumadevi@novell.com>
        * ArthimeticExpression.cs - made class internal

2004-05012  Umadevi S <sumadevi@novell.com>
	* Aggregation.cs - made class/enums/interfaces internal 

2004-05-05  Atsushi Enomoto <atsushi@ximian.com>

	* ArithmeticExpressions.cs: avoid null exception on add operation.

2004-04-29  Juraj Skripsky <juraj@hotfeet.ch>

	* Parser.jay: Fix rule for negative expressions.
	Add precedence rules for '<' and '>'.

2004-04-28 Boris Kirzner <borisk@mainsoft.com>
