@@ -1,3 +1,7 @@
+2005-01-28  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* Comparison.cs : Eval() could be direct invocation to EvalBoolean().
+
 2005-01-26  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* Tokenizer.cs : just throw SyntaxErrorException instead of Exception.
